[package]
name = "staticdir"
version = "0.1.0"
authors = ["franza <nico.franza@gmail.com>"]

[dependencies.iron]
version = "*"

[dependencies]
rustc-serialize = "0.3"

[dependencies.url]
git = "https://github.com/servo/rust-url"


[dev-dependencies.hyper]
version = "*"

[dev-dependencies.mount]
git = "https://github.com/iron/mount.git"

[dev-dependencies]
staticfile = "*"
