[package]
name = "staticdir"
description = "Providing list of directory entries for Iron framework"
version = "0.2.0"
authors = ["franza <nico.franza@gmail.com>"]
keywords = ["iron", "web", "http", "file", "static", "folder", "dir", "directory"]

[dependencies]
rustc-serialize = "0.3"
iron = "0.2"
url = { git = "https://github.com/servo/rust-url" }
filetime = "0.1.9"

[dev-dependencies]
staticfile = "*"
mount = { git = "https://github.com/iron/mount.git" }
iron-test = "0.2"
